--- a/001.HTML학습/01.First_PJ/문서의 구조화.html
+++ b/001.HTML학습/01.First_PJ/문서의 구조화.html
@@ -67,9 +67,9 @@
         <h3>9. 포트폴리오</h3>
         - 개인포폴 주제선정 후 분기별 제출 및 발표
         예시)
-        <a href="" target="_blank">https</a>://tombap8.github.io/FED-PJ-2022-tom/
-        <a href="" target="_blank">https</a>://tombap8.github.io/KNG-FED211/index.html
-        <a href="" target="_blank">https</a>://tombap8.github.io/FED-RF-2023-TOM/950.%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%B0%9C%ED%91%9C/main/index3rd.html
+        <a href="https://tombap8.github.io/FED-PJ-2022-tom/">https://tombap8.github.io/FED-PJ-2022-tom/</a>
+        <a href="https://tombap8.github.io/KNG-FED211/index.html">https://tombap8.github.io/KNG-FED211/index.html</a>
+        <a href="https://tombap8.github.io/FED-RF-2023-TOM/950.%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%B0%9C%ED%91%9C/main/index3rd.html">https://tombap8.github.io/FED-RF-2023-TOM/950.%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%EB%B0%9C%ED%91%9C/main/index3rd.html</a>
         <a href="" target="_blank">프론트엔드 개발 1회차</a>
 
         <h3>10. UI/UX 참고자료</h3>
