--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -6,6 +6,75 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- 탭에 출력되는 타이틀 -->
 		<title>네이버 요약 뉴스</title>
+		<!-- CSS 인터널방식 코드 -->
+		<style>
+			/* CSS코딩구역 */
+			/* 
+				CSS 설정 코딩방식
+
+				선택자{
+					속성:값;
+				}
+
+				-> 선택자는 요소명 또는 클래스명 또는 아이디명 등으로 사용
+				
+				[CSS 박스모델]
+				- 모든 HTML 요소는 사각형으로 되어있고, 가로/세로/패딩/마진/보더의 속성으로 구성됨
+				width/height/padding/margin/border
+				-> 기본박스 디자인은 가로, 세로 크기를 줄 경우 패딩과 보더는 박스 크기에 포함되지 않는다.
+				=> 이런 박스를 컨텐트 박스라고 함
+
+			 */
+
+			 /* 공통디자인 : 클래스를 주로 사용함 */
+			 .part{
+				/* 박스모델 5가지 세팅 */
+				/* 가로크기-기본값auto
+				블록의 기본값은 부모박스 채우기
+				인라인의 기본값은 내용물만큼 */
+				width: 750px;
+				/* 세로크기-기본값auto
+				모든 요소에서 기본값은 내용물만큼 안주면 기본값 auto로 설정됨 */
+				/* height: 300px; */
+				/* height: auto; */
+				border: 1px solid #000;
+				/* 패딩
+				padding: 수치;(4방향 모두)
+				padding: 수치 수치;(위 아래 양쪽)
+				padding: 수치 수치 수치;(위 양쪽 아래)
+				padding: 수치 수치 수치 수치;(위 오른 아래 왼쪽)
+				 */
+				padding: 50px;
+				
+				/* 박스가 패딩, 보더를 포함하는 설정(보더랑 패딩 합쳐서 사이즈 정한다고) */
+				box-sizing: border-box;
+
+				/* content-box가 기본값임 */
+				/* box-sizing: content-box; */
+
+				/* 마진(밑줄의 경우 m20이라고 하면 됨)
+				마진
+				margin: 수치;(4방향 모두)
+				margin: 수치 수치;(위 아래 양쪽)
+				margin: 수치 수치 수치;(위 양쪽 아래)
+				margin: 수치 수치 수치 수치;(위 오른 아래 왼쪽)
+
+				[블록박스 가로망향 중앙정렬 마진설정]
+				마영오~! (마진 0 오토라는 뜻)
+				margin: 0 auto;
+
+				*/
+				margin: 20px auto;
+			 }
+
+
+			 /* 메인 이미지 크기 변경하기 */
+			 #main-area img{
+				width: 100px;
+				/* w100이라 하면 width:100px */
+				/* w100p이라 하면 width:100% */
+			 }
+		</style>
 	</head>
 	<body>
 		<!-- 1. 상단영역 : 제목, 메뉴 -->
@@ -16,7 +85,8 @@
 			<div>
 				<!-- class="menu" -->
 				<a href="#">
-					<img src="./images/logo.png" alt="네이버 로고" />
+					<img src="./images/logo.png" alt="네이버 로고" style="width: 50px; vertical-align: middle;"/>
+					<!-- style 속성으로 개별요소에 CSS를 설정할 수 있다! 이런 방식을 인라인 방식이라고 함 -->
 				</a>
 				<a href="">정치</a>
 				<a href="">경제</a>
@@ -27,11 +97,31 @@
 		</header>
 
 		<!-- 2. 메인영역 : 컨텐츠 -->
-		<main id="main-area" class="part"></main>
+		<main id="main-area" class="part">
+			<img src="./images/news.png" alt="뉴스 이미지" />
+		</main>
 
 		<!-- 3. 하단영역 : 회사정보 -->
-		<footer id="info-area" class="part"></footer>
+		<footer id="info-area" class="part">
+			<!-- address : 주소, 전화번호, 대표자 등을 포함하는 시멘틱 태그 -->
+			<address>
+				서울시 강남구 역삼동 119 대호빌딩 8층 <br>
+				대표 : 장정윤 <br>
+				전화 : 010-1234-5678
+			</address>
+
+
+		</footer>
+
 		<!-- 
+
+		[이름규칙]
+		1. 파스칼 케이스(JS에서) : PascalCase -> 단어마다 대문자
+		2. 캐믈 케이스(JS에서) : CamelCase -> 첫단어 빼고 단어마다 대문자
+		3. 스네이크 케이스(파일명/폴더명) : snake_case -> 모두 소문자 + 단어사이 언더바
+		4. 케밥 케이스(요소명) : cabab-case -> 모두 소문자 + 단어사이 데쉬
+
+
         [요소 명명법]
         1. 아이디는 #, 클래스는 . (약어 만드는거임)
         2. 이름은 구체적으로 만들고 단어마다 데쉬(-)를 사용함(aka 케발케이스)
