--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -52,8 +52,7 @@
 				/* content-box가 기본값임 */
 				/* box-sizing: content-box; */
 
-				/* 마진(밑줄의 경우 m20이라고 하면 됨)
-				마진
+				/* 마진
 				margin: 수치;(4방향 모두)
 				margin: 수치 수치;(위 아래 양쪽)
 				margin: 수치 수치 수치;(위 양쪽 아래)
@@ -63,7 +62,7 @@
 				마영오~! (마진 0 오토라는 뜻)
 				margin: 0 auto;
 
-				*/
+				(밑줄의 경우 m20이라고 하면 됨)*/
 				margin: 20px auto;
 			 }
 
