--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -9,7 +9,7 @@
 		<!-- CSS 인터널방식 코드 -->
 		<style>
 			/* CSS코딩구역 */
-			/* 
+			/*
 				CSS 설정 코딩방식
 
 				선택자{
@@ -17,7 +17,7 @@
 				}
 
 				-> 선택자는 요소명 또는 클래스명 또는 아이디명 등으로 사용
-				
+
 				[CSS 박스모델]
 				- 모든 HTML 요소는 사각형으로 되어있고, 가로/세로/패딩/마진/보더의 속성으로 구성됨
 				width/height/padding/margin/border
@@ -45,7 +45,7 @@
 				padding: 수치 수치 수치 수치;(위 오른 아래 왼쪽)
 				 */
 				padding: 50px;
-				
+
 				/* 박스가 패딩, 보더를 포함하는 설정(보더랑 패딩 합쳐서 사이즈 정한다고) */
 				box-sizing: border-box;
 
@@ -69,10 +69,27 @@
 
 			 /* 메인 이미지 크기 변경하기 */
 			 #main-area img{
-				width: 100px;
+				width: 300px;
 				/* w100이라 하면 width:100px */
 				/* w100p이라 하면 width:100% */
 			 }
+
+			 /* 상단영역, 하단영역 공통 - 콤마(,)는 그룹선택자*/
+			 header.part,footer.part{
+				color: red;
+			 }
+
+			 /*
+			 [선택자들]
+			 1. 타입선택자 : 태그명
+			 2. 아이디/클래스 선택자 : 요소이름
+			 3. 종속선택자 : 요소명+이름 (h1#my) // 요소명하고 붙여서 이름 쓴다고
+			 4. 자손선택자 : 띄어쓰기
+			 5. 직계자식 선택자 : 꺽쇠(>)
+			 6. 그룹선택자 : 콤마(,)
+
+
+			 */
 		</style>
 	</head>
 	<body>
@@ -84,7 +101,11 @@
 			<div>
 				<!-- class="menu" -->
 				<a href="#">
-					<img src="./images/logo.png" alt="네이버 로고" style="width: 50px; vertical-align: middle;"/>
+					<img
+						src="./images/logo.png"
+						alt="네이버 로고"
+						style="width: 50px; vertical-align: middle"
+					/>
 					<!-- style 속성으로 개별요소에 CSS를 설정할 수 있다! 이런 방식을 인라인 방식이라고 함 -->
 				</a>
 				<a href="">정치</a>
@@ -104,12 +125,10 @@
 		<footer id="info-area" class="part">
 			<!-- address : 주소, 전화번호, 대표자 등을 포함하는 시멘틱 태그 -->
 			<address>
-				서울시 강남구 역삼동 119 대호빌딩 8층 <br>
-				대표 : 장정윤 <br>
+				서울시 강남구 역삼동 119 대호빌딩 8층 <br />
+				대표 : 김김김 <br />
 				전화 : 010-1234-5678
 			</address>
-
-
 		</footer>
 
 		<!-- 
