--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -9,13 +9,12 @@
 		<!-- CSS 인터널방식 코드 -->
 		<style>
 			/* 웹폰트 구글 CDN (Content Delivery Network) */
-			@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Myeongjo:wght@700&display=swap');
-			
+			@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Myeongjo:wght@700&display=swap");
+
 			/*
 			font-family: 'Black Han Sans', sans-serif;
 			font-family: 'Nanum Myeongjo', serif;
 			*/
-			
 
 			/* CSS코딩구역 */
 			/*
@@ -93,47 +92,50 @@
 			/* 상단영역 */
 			#top-area {
 				background-color: #e0fcc4;
-				font-family: "Black Han Sans" sans-serif;
 			}
+
 			/* 하단영역 */
 			#info-area {
 				background-color: #cecece;
+				font-family: "Black Han Sans" sans-serif;
+			}
 
-				/* 타이틀
-				.tit {
-					font-family: "Black Han Sans" sans-serif;
-				}
+			/* 타이틀 */
+			.tit {
+				font-family: "Black Han Sans", sans-serif;
+			}
 
-				/* 메뉴
-				.menu {
-					font-family: "Nanum Myeongjo" serif;
-				} */
+			/* 메뉴 */
+			.menu {
+				font-family: "Nanum Myeongjo", serif;
+			}
 
-				/* 메뉴링크 */
-				.menu a {
-					color: #222;
-					/* 글자밑줄없앰 */
-					text-decoration: none;
-					/* 글자크기 */
-					font-size: 24px;
-				}
-				/* 메뉴링크 오버시 */
-				.menu a:hover {
-					text-decoration: overline;
-					text-decoration-style: wavy;
-					color: hotpink;
-				}
+			/* 메뉴링크 */
+			.menu a {
+				color: #222;
+				/* 글자밑줄없앰 */
+				text-decoration: none;
+				/* 글자크기 */
+				font-size: 24px;
+			}
+			/* 메뉴링크 오버시
+			:hover는 가상클래스(마우스 오버시) */
+			.menu div+a:hover {
+				text-decoration: overline;
+				text-decoration-style: wavy;
+				color: hotpink;
 			}
 
 			/*
 			 [선택자들]
-			 1. 타입선택자 : 태그명
+			 1. 타입 선택자 : 태그명
 			 2. 아이디/클래스 선택자 : 요소이름
-			 3. 종속선택자 : 요소명+이름 (h1#my) // 요소명하고 붙여서 이름 쓴다고
-			 4. 자손선택자 : 띄어쓰기
+			 3. 종속 선택자 : 요소명+이름 (h1#my) // 요소명하고 붙여서 이름 쓴다고
+			 4. 자손 선택자 : 띄어쓰기
 			 5. 직계자식 선택자 : 꺽쇠(>)
-			 6. 그룹선택자 : 콤마(,)
-
+			 6. 그룹 선택자 : 콤마(,)
+			 7. 형제 선택자 : 플러스(+)
+			    예) a+a -> 앞에 a요소가 있는 a요소선택
 
 			 */
 		</style>
@@ -154,8 +156,12 @@
 					/>
 					<!-- style 속성으로 개별요소에 CSS를 설정할 수 있다! 이런 방식을 인라인 방식이라고 함 -->
 				</a>
-				<a href="">정치</a>| <a href="">경제</a>| <a href="">사회</a>|
-				<a href="">IT/과학</a>| <a href="">TV/연예</a>|
+				<a href="">정치</a> |
+				<a href="">경제</a> |
+				<a href="">사회</a> |
+				<div></div>
+				<a href="">IT/과학</a> |
+				<a href="">TV/연예</a>
 			</div>
 		</header>
 
