--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -45,7 +45,10 @@
 				모든 요소에서 기본값은 내용물만큼 안주면 기본값 auto로 설정됨 */
 				/* height: 300px; */
 				/* height: auto; */
-				border: 1px solid #000;
+
+				border-radius: 20px;
+				border: 4px double lightcoral;
+				
 				/* 패딩
 				padding: 수치;(4방향 모두)
 				padding: 수치 수치;(위 아래 양쪽)
@@ -99,6 +102,13 @@
 				background-color: #cecece;
 				font-family: "Black Han Sans" sans-serif;
 			}
+
+			/* 주소요소 */
+			#info-area address{
+				/* 기울여져있는 주소(이탈릭체) normal하게 바꿔준다고 */
+				font-style: normal;
+				color: darkgreen;
+			} 
 
 			/* 타이틀 */
 			.tit {
