--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -95,6 +95,7 @@
 			/* 상단영역 */
 			#top-area {
 				background-color: #e0fcc4;
+				font-family: 'Nanum Myeongjo', serif;
 			}
 
 			/* 하단영역 */
@@ -169,7 +170,6 @@
 				<a href="">정치</a> |
 				<a href="">경제</a> |
 				<a href="">사회</a> |
-				<div></div>
 				<a href="">IT/과학</a> |
 				<a href="">TV/연예</a>
 			</div>
