수업끝6시6분

--- a/001.HTML학습/02.info_PJ/sub2.html
+++ b/001.HTML학습/02.info_PJ/sub2.html
@@ -11,7 +11,6 @@
     <!-- CSS 익스터널방식 코드 -->
     <link rel="stylesheet" href="./css/sub.css">
   </head>
-  <>
     <!-- 1. 상단영역 : 제목, 메뉴 -->
     <header id="top-area" class="part">
       <!-- 1-1. 타이틀 -->
@@ -36,7 +35,7 @@
       <!-- 2. 메인영역: 컨텐츠 -->
       <main id="main-area" class="part">
       <!-- 2-1. 서브 타이틀 -->
-      <h2 class="sub-title">경제 뉴스</h2>
+      <h2 class="sub-title economics">경제 뉴스</h2>
     </main>
 
     <!-- 3. 하단영역 : 회사정보 -->
