--- a/001.HTML학습/02.info_PJ/sub5.html
+++ b/001.HTML학습/02.info_PJ/sub5.html
@@ -36,7 +36,7 @@
     <!-- 2. 메인영역: 컨텐츠 -->
     <main id="main-area" class="part">
       <!-- 2-1. 서브 타이틀 -->
-      <h2 class="sub-title">TV/연예 뉴스</h2>
+      <h2 class="sub-title tv">TV/연예 뉴스</h2>
     </main>
 
     <!-- 3. 하단영역 : 회사정보 -->
