--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -159,6 +159,7 @@
 		<header id="top-area" class="part">
 			<!-- 1-1. 타이틀 -->
 			<h1 class="tit">네이버 요약뉴스</h1>
+			<!-- font-size: 20px; -->
 			<!-- 1-2. 메뉴 -->
 			<nav class="menu">
 				<a href="index.html">
