--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>유니의 아카이브</title>
     <style>
+        html,body{
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body{
+            background-image: 
+            linear-gradient(to bottom, rgb(205, 255, 227), rgb(247, 206, 255));
+            /* [선형 그라데이션] 
+            background-image:
+            liner-gradient(방향, 색1, 색2, 색3, ...)
+            - 방향:
+            to top, to left, to right, to bottom */
+        }
         .wrap{
             border: 2px dashed darkblue;
             border-radius: 20px;
