--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
             height: 100%;
         }
         body{
+
             background-image: 
             linear-gradient(to bottom, rgb(205, 255, 227), rgb(247, 206, 255));
-            /* [선형 그라데이션] 
+            /*
+            [선형 그라데이션] 
             background-image:
             liner-gradient(방향, 색1, 색2, 색3, ...)
             - 방향:
-            to top, to left, to right, to bottom */
+            to top, to left, to right, to bottom
+            */
         }
         .wrap{
             border: 2px dashed darkblue;
