--- a/001.HTML학습/02.info_PJ/sub4.html
+++ b/001.HTML학습/02.info_PJ/sub4.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<!-- 뷰포트: 모바일 기기에서 실제 픽셀을 맞춰주는 메타설정 -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- 탭에 출력되는 타이틀 -->
-		<title>네이버 요약뉴스 - 정치뉴스</title>
+		<!-- (창 맨 위에 뜨는)탭에 출력되는 타이틀 -->
+		<title>네이버 요약뉴스 - IT/과학 뉴스</title>
 		<!-- CSS 인터널방식 코드 -->
 		<style></style>
 		<!-- CSS 익스터널방식 코드 -->
@@ -66,7 +66,6 @@
       - 이미지 설명은 하위요소인 figcation을 사용함
       (설명이 필요 없으면 생략한다.)
       -->
-
 			<!-- 2-5. 기사내용 -->
 			<section class="contents">
 				<p>
@@ -143,15 +142,14 @@
 				<h4>참고자료 : 멘델의 유전법칙</h4>
 				<blockquote
 				cite="https://ko.wikipedia.org/wiki/%EB%A9%98%EB%8D%B8%EC%9D%98_%EC%9C%A0%EC%A0%84%EB%B2%95%EC%B9%99">
-				<img src="./images/kong.PNG" alt="완두콩">
+				<img src="./images/kong.jpg" alt="완두콩">
 					멘델의 유전법칙은 그레고어 멘델이 완두콩을 이용한 7년의 실험을 정리하여 1865년에서 1866년 사이에 발표한 유전학의 법칙이다. 멘델의 유전법칙은 발표 초기 그리 큰 관심을 받지 않았으나 20세기 초 재발견된 후 큰 영향력을 발휘하였다. 1915년 토머스 헌트 모건이 보페리-서튼 유전자 이론과 함께 멘델의 유전법칙을 유전학의 기본적인 법칙으로 제시하였고, 이로써 고전 유전학이 완성되었다.
 				</blockquote>
 			 </article>
 
 
 			<!-- 2-6. 기자정보 -->
-			<div class="reporter"></div>
-			최상국 기자 skchoi@inews24.com
+			<div class="reporter">최상국 기자 skchoi@inews24.com</div>
 
 			<!-- 2-7. 기사 원문 -->
 			<h5 class="article-link">
@@ -162,7 +160,7 @@
 				>
 			</h5>
 
-			<hr>
+			<hr />
 			<!-- hr 요소 : horizontal line 수평선
 			참고로 보통 CSS디자인 요소로 사용하지는 않음 -->
 
