--- a/001.HTML학습/02.info_PJ/sub4.html
+++ b/001.HTML학습/02.info_PJ/sub4.html
@@ -101,6 +101,19 @@
 					</ins>에서 미세·나노플라스틱이 관찰됐다.
 				</p>
 
+				<!-- 유튜브 동영상 박스 -->
+				<div class="mvbox">
+					<iframe src="https://www.youtube.com/embed/gS0GAWWmZZM" title="뇌까지 침투한 미세 플라스틱 &#39;독성물질&#39; 된다 / JTBC 아침&amp;"></iframe>
+					
+					<!-- 
+						[iframe 요소]
+						- inline frame
+						- 한 웹페이지 안에 다른 시스템의 웹을 불러올 수 있는 요소
+						- 필수속성 : src - 시스템 경로
+						- 주의 : CSS설정으로 디자인을 변경할것(width, height, frameborder 웹표준검사시 이런 부분에 권고메시지를 검출한다)
+					-->
+				</div>
+
 				<p>
 					이는 미세·나노플라스틱이 외부에서 유입된 것이 아닌 수확한 완두콩 내
 					배아와 떡잎에 분포했던 미세·나노플라스틱이 식물 전체 세포로 이동했음을
@@ -138,7 +151,7 @@
              -->
 
 			 <!-- 2-5.5 인용블록영역 -->
-			 <article class="quote-box">
+			 <article class="quote-box bd-box">
 				<h4>참고자료 : 멘델의 유전법칙</h4>
 				<blockquote
 				cite="https://ko.wikipedia.org/wiki/%EB%A9%98%EB%8D%B8%EC%9D%98_%EC%9C%A0%EC%A0%84%EB%B2%95%EC%B9%99">
@@ -165,8 +178,8 @@
 			참고로 보통 CSS디자인 요소로 사용하지는 않음 -->
 
 			<!-- 주해영역 -->
-			<article class="desc">
-				<h5>주해</h5>
+			<article class="desc art-box bd-box">
+				<h4>주해</h4>
 				<p>
 					<small>① 미세, 나노플라스틱은 1㎛(마이크로미터·100만 분의 1m)∼5㎜ 크기의 플라스틱. 애초에 작은 크기로 생산되기도 하지만 페트병이나 비닐봉지 등이 시간이 지나며 잘게 부서져 생성되기도 한다.
 					<br><br>
