--- a/001.HTML학습/02.info_PJ/sub4.html
+++ b/001.HTML학습/02.info_PJ/sub4.html
@@ -97,13 +97,13 @@
 					미세·나노플라스틱이 확인됐다. 또한 수확한 완두콩을 미세·나노플라스틱에
 					오염되지 않은 토양에 재식재하여 14일간 배양한 뒤 관찰한 결과, <ins>
 						표피보다
-						세포간 및 세포내 공간
+						세포간 및 세포 내 공간
 					</ins>에서 미세·나노플라스틱이 관찰됐다.
 				</p>
 
 				<!-- 유튜브 동영상 박스 -->
 				<div class="mvbox">
-					<iframe src="https://www.youtube.com/embed/gS0GAWWmZZM" title="뇌까지 침투한 미세 플라스틱 &#39;독성물질&#39; 된다 / JTBC 아침&amp;"></iframe>
+					<iframe src="https://www.youtube.com/embed/gS0GAWWmZZM"></iframe>
 					
 					<!-- 
 						[iframe 요소]
@@ -131,12 +131,12 @@
 					  이를 통해 미세·나노플라스틱이 인간과
 					  동물이 섭취하는 열매에 전이돼 소비자에게 도달할 수 있음을 짐작케
 					  한다
-					</q>라고 전했다.
+					</q>라고 전했다. <br>
 					<del>사실 짐작이 아니라 진짜당ㅎㅎ 헉!</del>
 				</p>
-
+<!-- abbr : 줄임말 -->
 				<p>
-					이 연구는 과학기술정보통신부와 교육부, 한국연구재단이 추진하는
+					이 연구는 <abbr title="과학기술정보통신부">과기정통부</abbr>와 교육부, 한국연구재단이 추진하는
 					중견연구사업 및 이공분야학문후속세대양성사업으로 수행됐으며,
 					환경과학분야 국제학술지 저널 오브 해저드스 머티리스<sub>
 						Journal of
@@ -253,6 +253,7 @@
               - 필수속성 ->> title 속성 -> 툴팁으로 원래뜻을 표시
           (참고: title 툴팁속성은 어느요소든 사용가능함!)
           - 기본디자인 : 점선 밑줄
+		  text-decoration: underline dotted;
           
           4. 주소인용
           <address>
