--- a/001.HTML학습/02.info_PJ/sub4.html
+++ b/001.HTML학습/02.info_PJ/sub4.html
@@ -188,6 +188,24 @@
 					</small>
 				</p>
 			</article>
+
+			<!-- 오늘의 작품&느낌 -->
+			<article class="work">
+				<h4>오늘의 작품 &amp; 느낌</h4>
+				<figure>
+					<img src="./images/img_the_scream.jpg" alt="뭉크의 절규">
+					<figcaption>뭉크의 &lt;<cite>절규</cite>&gt;</figcaption>
+					<!-- cite:기울기 -->
+				</figure>
+			</article>
+			<!-- 
+				[html 요소에서 특수문자 처리]
+				& 엔퍼센트 &amp;
+				< 여는꺾쇠 &lt; (lt는 less than (~보다 작은))
+				> 닫는꺾쇠 &gt; (gt는 greater than(~보다 큰))
+			 -->
+
+
 		</main>
 
 		<!-- 3. 하단영역 : 회사정보 -->
