--- a/001.HTML학습/02.info_PJ/index.html
+++ b/001.HTML학습/02.info_PJ/index.html
@@ -178,7 +178,7 @@
 
 		<!-- 2. 메인영역 : 컨텐츠 -->
 		<main id="main-area" class="part">
-			<img src="./images/news.png" alt="메인이미지" />
+			<img src="./images/main_news.JPG" alt="메인이미지" />
 		</main>
 
 		<!-- 3. 하단영역 : 회사정보 -->
