--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유니의 아카이브</title>
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    <section class="wrap">
-    <h1>유니의 아카이브</h1>
-    <h2>
-        <a href="../001.HTML학습/02.info_PJ/" target="_blank">Info PJ</a>
-    </h2>
- </section>   
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>유니의 아카이브</title>
+		<link rel="stylesheet" href="./css/main.css" />
+	</head>
+	<body>
+        <!-- 첫페이지 -->
+		<section class="page" id="pg1">
+			<!-- 네비게이션 -->
+			<nav class="menu">
+            	<h1>
+					<img
+						src="../001.HTML학습/02.info_PJ/images/mylogo_14.png"
+						alt="내로고">
+				</h1>
+
+				<!-- 메뉴 모음 -->
+				<h2>
+                    <a href="#pg1">HTML학습</a>
+                    <span> | </span>
+                    <a href="#pg2">CSS학습</a>
+                </h2>
+			</nav>
+
+			<!-- 링크 박스 -->
+			<section class="link-box">
+				<h2>HTML 학습</h2>
+				<p>
+					<a href="../001.HTML학습/02.info_PJ/" target="_blank">Info PJ</a>
+				</p>
+			</section>
+		</section>
+	</body>
 </html>
