--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -33,5 +33,33 @@
 				</p>
 			</section>
 		</section>
+        <!-- 두번째 페이지 -->
+		<section class="page" id="pg1">
+			<!-- 네비게이션 -->
+			<nav class="menu">
+            	<h1>
+					<img
+						src="../001.HTML학습/02.info_PJ/images/mylogo_14.png"
+						alt="내로고">
+				</h1>
+
+				<!-- 메뉴 모음 -->
+				<h2>
+                    <a href="#pg1">HTML학습</a>
+                    <span> | </span>
+                    <a href="#pg2">CSS학습</a>
+                </h2>
+			</nav>
+
+			<!-- 링크 박스 -->
+			<section class="link-box">
+				<h2>CSS 학습</h2>
+				<p>
+					<a href="../002.CSS학습/01-1. 배경연습.html" target="_blank">01-1.배경연습</a>
+					<p><a href="../002.CSS학습/01-2.배경크기.html 배경연습.html" target="_blank">01-2.배경크기설정</a></p>
+					<p><a href="../002.CSS학습/02.블록과인라인.html 배경연습.html" target="_blank">02.블록과 인라인</a></p>
+				</p>
+			</section>
+		</section>
 	</body>
 </html>
