--- a/001.HTML학습/02.info_PJ/sub4.html
+++ b/001.HTML학습/02.info_PJ/sub4.html
@@ -351,18 +351,34 @@
 				<table>
 					<tr>
 						<td>1</td>
-						<td></td>
-						<td></td>
+						<td>
+							<a href="https://n.news.naver.com/mnews/article/081/0003431354"target="_blank">
+								정보통신정책연구원, ‘2023년 방송 프로그램 외주제작 거래 실태 보고서’ 발간
+							</a>
+						</td>
+						<td>
+							<a href=""target="_blank">
+								<img src="./images/cutnews1.jpg" alt="포토뉴스이미지1">
+							</a>
+						</td>
 					</tr>
 					<tr>
+
 						<td>2</td>
-						<td></td>
-						<td></td>
+						<td>
+							<a href="https://n.news.naver.com/mnews/article/662/0000037825"target="_blank">눈 건강 지키는 6가지 생활습관</a>
+						</td>
+						<td><a href=""target="_blank">
+							<img src="./images/cutnews2.jpg" alt="포토뉴스이미지2">
+						</a></td>
 					</tr>
 					<tr>
 						<td>3</td>
-						<td></td>
-						<td></td>
+						<td><a href="https://n.news.naver.com/mnews/article/346/0000070772"target="_blank">쌀 씻는데, 물 '이 색'으로 변하면… 당장 버려야</a>
+						</td>
+						<td><a href=""target="_blank">
+							<img src="./images/cutnews3.jpg" alt="포토뉴스이미지3">
+						</a></td>
 					</tr>
 				</table>
 			 </article>
