--- a/002.CSS학습/07.블록 세로크기.html
+++ b/002.CSS학습/07.블록 세로크기.html
@@ -53,6 +53,56 @@
         .bx2{
             max-height: 600px;  /* mah600 */
         }
+
+        /* 3. 최소높이 700px
+        - 최소높이 설정값보다 내용이 적을 경우에도 최소높이를 유지함
+        - 디자인상 박스의 최소 높이를 유지하며 내용이 유동적이라 내용이 너무 없을 때를 대비하여 줄 수 있다.
+        => 사이트 게시물에서 냉무여도 페이지가 어느정도 높이를 유지할 때 사용 */
+        .bx3{
+            min-height: 700px;  /* mh700 */     
+        }
+
+        /* 4. 최소700px ~ 최대800px 높이값 */
+        .bx4{
+            min-height: 700px;  /* mh700 */
+            max-height: 800px;  /* mah800 */
+        }
+
+        /*
+        [overflow 속성이란?]
+        - 블록박스 내용 요소가 넘칠 때 보이는 옵션을 설정하는 속성
+        - 기본값 : visable -> 넘치는 내용 보임
+        - 세부속성 :
+                    가로축 -> overflow-x
+                    세로축 -> overflow-y
+        */
+        /* 1. overflow: visable */
+        .ov1{
+            overflow: visible;  /* ovv */
+            /* 설정값 안줘도 기본값임 */
+        }
+        /* 2. overflow: hidden */
+        .ov2{
+            overflow: hidden;   /* oh */
+            /* 추가로 넘치는 자식만 숨기는 게 아니고,
+            자식요소 블록박스 중 첫번째와 마지막 자식의 마진값을 포함시킬 때도 사용할 수 있다. */
+        }
+
+        /* 3. overflow: scroll */
+        .ov3{
+            overflow-y: scroll;
+            /* overflow: scroll;
+            - 전체설정에 주면 x, y축 스크롤바 트랙이 모두 생성됨.
+            따라서 일반적으로 y축만 따로 줌
+            - 스크롤바 트랙은 내용이 적어도 항상 나타나있음*/
+        }
+
+        /* 4. overflow: auto (ova) */
+        .ov4{
+            overflow: auto;
+            /* 내용이 박스보다 많아지면
+            자동으로 y축 스크롤이 생김 (방향별 세팅 불필요) */
+        }
     </style>
 </head>
 
