--- a/900.인트로사이트/index.html
+++ b/900.인트로사이트/index.html
@@ -7,21 +7,30 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-        <!-- 첫페이지 -->
-		<section class="page" id="pg1">
+		<!-- 고정메뉴박스 -->
+		<header class="top-area">
+
+			<!-- 로고 -->
+			<h1 class="logo">
+				<img src="../001.HTML학습/02.info_PJ/images/mylogo_14.png" alt="내로고" />
+			</h1>
 			<!-- 네비게이션 -->
 			<nav class="menu">
-                <!-- 로고 -->
-            	<h1>
-					<img src="../001.HTML학습/02.info_PJ/images/mylogo_14.png" alt="내로고" />
-				</h1>
 				<!-- 메뉴 모음 -->
-				<h2>
-                    <a href="#pg1">HTML학습</a>
-                    <span> | </span>
-                    <a href="#pg2">CSS학습</a>
-                </h2>
+				<ul>
+					<li>
+						<a href="#pg1">HTML학습</a>
+					</li>
+					<li>
+						<a href="#pg2">CSS학습</a>
+					</li>
+                </ul>
 			</nav>
+
+		</header>
+
+    <!-- 첫 페이지 -->
+    <section class="page" id="pg1">   
 			<!-- 링크 박스 -->
 			<section class="link-box">
 				<h2>HTML 학습</h2>
@@ -31,22 +40,8 @@
 			</section>
 		</section>
 
-        <!-- 두번째 페이지 -->
-		<section class="page" id="pg2">
-			<!-- 네비게이션 -->
-			<nav class="menu">
-            	<h1>
-					<img src="../001.HTML학습/02.info_PJ/images/mylogo_14.png" alt="내로고"/>
-				</h1>
-
-				<!-- 메뉴 모음 -->
-				<h2>
-                    <a href="#pg1">HTML학습</a>
-                    <span> | </span>
-                    <a href="#pg2">CSS학습</a>
-                </h2>
-			</nav>
-
+    <!-- 두번째 페이지 -->
+    <section class="page" id="pg2"> 		
 			<!-- 링크 박스 -->
 			<section class="link-box">
 				<h2>CSS 학습</h2>
