--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -23,31 +23,25 @@
                 <section class="robot-box">
                     <!-- 2-1.1. 로봇머리 -->
                     <div class="head metal1">
-                        <!-- 왼눈 -->
-                        <div class="eye eye1"></div>
-                        <!-- 오른눈 -->
-                        <div class="eye eye2"></div>
-                        <!-- 코 -->
-                        <div class="nose"></div>
-                        <!-- 입 -->
-                        <div class="mouth"></div>
                         <!-- 왼귀 -->
                         <div class="ear ear1 metal2"></div>
                         <!-- 오른귀 -->
                         <div class="ear ear2 metal2"></div>
+                        <!-- 코 -->
+                        <div class="nose"></div>
+                        <!-- 왼눈 -->
+                        <div class="eye eye1"></div>
+                        <!-- 오른눈 -->
+                        <div class="eye eye2"></div>
+                        <!-- 입 -->
+                        <div class="mouth"></div>
+
                     </div>
                     <!-- 2-1.2. 로봇몸통 -->
                     <div class="body metal2">
                         <!-- 목 -->
                         <div class="neck metal2"></div>
-                        <!-- 왼팔 -->
-                        <div class="arm arm1 metal2">
-                            <span class="metal2"></span>
-                        </div>
-                        <!-- 오른팔 -->
-                        <div class="arm arm2 metal2">
-                            <span class="metal2"></span>
-                            </div>
+
                         <!-- 왼다리 -->
                         <div class="leg leg1 metal2">
                             <span class="metal2"></span>
@@ -56,10 +50,33 @@
                         <div class="leg leg2 metal2">
                             <span class="metal2"></span>
                             </div>
+
+                        <!-- 왼팔 -->
+                        <div class="arm arm1 metal2">
+                            <span class="metal2"></span>
+                        </div>
+                        <!-- 오른팔 -->
+                        <div class="arm arm2 metal2">
+                            <span class="metal2"></span>
+                            </div>
+                        
                         <!-- 왼어깨 -->
                         <div class="shdr shdr1 metal1"></div>
                         <!-- 오른어깨 -->
                         <div class="shdr shdr2 metal1"></div>
+
+
+
+
+                        <!-- TV -->
+                        <div class="tv">
+                            <!-- 스크린 -->
+                            <div class="screen">
+                                <!-- 유튜브iframe -->
+                                <div class="screen iframe"></div>
+                                <iframe src="https://www.youtube.com/embed/3P1CnWI62Ik"></iframe>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <!-- 2-2. 로봇설명박스 -->
