--- a/003.JS학습/JS1.기본사용법.html
+++ b/003.JS학습/JS1.기본사용법.html
@@ -228,6 +228,16 @@
             scale(1.3)`;
             // 왼쪽(-50%) 위쪽(-50%) 한바퀴(360deg) 커짐(1.3)
 
+            // 3-11. 전체 배경색 바꾸기
+            // 대상 : body
+            // JS에서 body는 특별히 취급하여
+            // document.body
+            var 바디 = Document.body;
+            바디.style.backgroundColor = 'lightgreen';
+            바디.sytle.transition = '5s 3s'; // 5초동안 기다렸다가 3초동안 바뀌기
+            
+
+
 
             /*
             [ JS의 요소 선택 메서드]
