--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -56,7 +56,7 @@
 
                         <!-- 왼팔 -->
                         <div class="arm arm1 metal2">
-                            <span class="metal2"></span>
+                            <span class="metal2"1></span>
                         </div>
                         <!-- 오른팔 -->
                         <div class="arm arm2 metal2">
