--- a/001.HTML학습/03.Robot_PJ/Robot.html
+++ b/001.HTML학습/03.Robot_PJ/Robot.html
@@ -17,6 +17,9 @@
                 <!-- 1-1. 로고 -->
                 <h1 class="logo">R2D4</h1>
                 <!-- 1-2. 탑이동버튼 -->
+                <button class="btn-top">
+                    <a href="#">TOP</a>
+                </button>
             </header>
         </div>
         <!-- 2. 메인영역 -->
@@ -24,6 +27,10 @@
             <main class="main-area">
                 <!-- 2-1. 로봇박스 -->
                 <section class="robot-box">
+                    <!-- 2-1-0.로봇말풍선 -->
+                    <a href="#text-box" class="link-title">
+                        <span>What is Robot?</span>
+                    </a>
                     <!-- 2-1.1. 로봇머리 -->
                     <div class="head metal1">
                         <!-- 왼귀 -->
@@ -83,7 +90,7 @@
                     </div>
                 </section>
                 <!-- 2-2. 로봇설명박스 -->
-                <section class="text-box">
+                <section class="text-box" id="text-box">
                     <!-- 2-2-1. 제목 -->
                     <h2>Robot</h2>
                     <!-- 2-2-2. 출처 -->
@@ -111,6 +118,8 @@
         <!-- 3. 하단영역 -->
         <div id="bottom-area">
             <footer class="bottom-area">
+                <!-- 3-1. 회사정보 -->
+                Robotronics Inc.
                 
             </footer>
         </div>
