--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -16,7 +16,7 @@
         // JS함수 -> function 함수명(){코드}
         function 멍멍이(먹이) ;
             alert(먹이);
-                    document.getElementById('ifr').src='https://www.youtube.com/embed"+먹이; // 멍멍이 함수구역
+                    document.getElementById('ifr').src='https://www.youtube.com/embed'+먹이; /* 멍멍이 함수구역 */
     </script>
 </head>
 <body>
