--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -148,7 +148,15 @@
                         </div>
                         <!-- 캐릭터박스 -->
                         <div class="cat-box">
-
+                            <div class="cat-inbox">
+                                <div>
+                                <!-- 개별캐릭터박스 -->
+                                <!-- article -->
+                                <!-- 이미지박스 -->
+                                <!-- .imbx -->
+                                <!-- 설명박스 -->
+                                <!-- .descbx -->
+                                
                         </div>
                     </div>
                 </div>
