--- a/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
+++ b/700.쉐도잉프로젝트/01.DKB_PJ/03.구현소스/index.html
@@ -134,7 +134,8 @@
         </div>
         <!-- 2. 배너영역 -->
         <div id="ban-area">
-            <section class="ban-area"><!-- 배너는 중앙속박스 적용 안함 -->
+            <section class="ban-area">
+                <!-- 배너는 중앙속박스 적용 안함 -->
                 <h2 class="temp-tit">2. 배너영역</h2>
                 <div class="cont-box">
                     <div class="col-12">
@@ -149,14 +150,59 @@
                         <!-- 캐릭터박스 -->
                         <div class="cat-box">
                             <div class="cat-inbox">
-                                <div>
                                 <!-- 개별캐릭터박스 -->
-                                <!-- article -->
-                                <!-- 이미지박스 -->
-                                <!-- .imbx -->
-                                <!-- 설명박스 -->
-                                <!-- .descbx -->
-                                
+                                <article>
+                                    <!-- 이미지박스 -->
+                                    <div class="imbx">
+                                        <img src="./images/dc1.png" alt="공유" />
+                                        <span class="iname"> <!-- 이름이미지 -->
+                                            <img src="./images/d011.png" alt="흐린 이름">
+                                            <img src="./images/d01.png" alt="진한 이름">
+                                        </span>
+                                    </div>
+                                    <!-- 설명박스 -->
+                                    <div class="descbx"></div>
+                                </article>
+                                <!-- 개별캐릭터박스 -->
+                                <article>
+                                    <!-- 이미지박스 -->
+                                    <div class="imbx">
+                                        <img src="./images/dc2.png" alt="지은탁" />
+                                        <span class="iname"> <!-- 이름이미지 -->
+                                            <img src="./images/d022.png" alt="흐린 이름">
+                                            <img src="./images/d02.png" alt="진한 이름">
+                                        </span>
+                                    </div>
+                                    <!-- 설명박스 -->
+                                    <div class="descbx"></div>
+                                </article>
+                                <!-- 개별캐릭터박스 -->
+                                <article>
+                                    <!-- 이미지박스 -->
+                                    <div class="imbx">
+                                        <img src="./images/dc3.png" alt="저승이" />
+                                        <span class="iname"> <!-- 이름이미지 -->
+                                            <img src="./images/d033.png" alt="흐린 이름">
+                                            <img src="./images/d03.png" alt="진한 이름">
+                                        </span>
+                                    </div>
+                                    <!-- 설명박스 -->
+                                    <div class="descbx"></div>
+                                </article>
+                                <!-- 개별캐릭터박스 -->
+                                <article>
+                                    <!-- 이미지박스 -->
+                                    <div class="imbx">
+                                        <img src="./images/dc4.png" alt="써니" />
+                                        <span class="iname"> <!-- 이름이미지 -->
+                                            <img src="./images/d044.png" alt="흐린 이름">
+                                            <img src="./images/d04.png" alt="진한 이름">
+                                        </span>
+                                    </div>
+                                    <!-- 설명박스 -->
+                                    <div class="descbx"></div>
+                                </article>
+                            </div>
                         </div>
                     </div>
                 </div>
