--- a/001.HTML학습/07.ShoppingMall_PJ/01.가로방향.html
+++ b/001.HTML학습/07.ShoppingMall_PJ/01.가로방향.html
@@ -4,56 +4,36 @@
     <meta charset="utf-8">
     <title>01.가로방향 배너 슬라이드</title>
     <link rel="stylesheet" href="css/main.css">
-    <!-- 외부JS삽입 -->
-    <script src="js/main1.js"></script>
+    <script src="js/main1.js"></script><!-- 외부JS삽입 -->
 </head>
 
 <body>
     <section id="container">
         <!--탑영역-->
-        <header><img src="images/index_01.jpg" width="1381" height="222" alt="메뉴"></header>
+        <header>
+            <img src="images/index_01.jpg" width="1381" height="222" alt="메뉴">
+        </header>
+
+
         <!--슬라이드 배너 영역-->
         <section>
             <!--슬라이드-->
-            <ul id="slide">
-                <li><img src="images/slide01.jpg" alt="slide"></li>
-                <li><img src="images/slide02.jpg" alt="slide"></li>
-                <li><img src="images/slide03.jpg" alt="slide"></li>
-                <li><img src="images/slide04.jpg" alt="slide"></li>
-                <li><img src="images/slide05.jpg" alt="slide"></li>
-            </ul>
+            <ul id="slide"></ul>
+            
             <!--이동버튼-->
             <a href="#" class="abtn ab1"><img src="images/left_btn.png" alt="왼쪽이동버튼"></a>
             <a href="#" class="abtn ab2"><img src="images/right_btn.png" alt="오른쪽이동버튼"></a>
 
             <!--블릿버튼-->
-            <ol class="indic">
-                <li class="on">
-                    <img src="images/dot1.png" alt="흰색">
-                    <img src="images/dot2.png" alt="회색">
-                </li>
-                <li>
-                    <img src="images/dot1.png" alt="흰색">
-                    <img src="images/dot2.png" alt="회색">
-                </li>
-                <li>
-                    <img src="images/dot1.png" alt="흰색">
-                    <img src="images/dot2.png" alt="회색">
-                </li>
-                <li>
-                    <img src="images/dot1.png" alt="흰색">
-                    <img src="images/dot2.png" alt="회색">
-                </li>
-                <li>
-                    <img src="images/dot1.png" alt="흰색">
-                    <img src="images/dot2.png" alt="회색">
-                </li>
-            </ol>
-
-
+            <ol class="indic"></ol>
         </section>
+
         <!--사이드 영역-->
-        <aside><img src="images/index_03.jpg" width="467" height="564" alt="03"></aside>
+        <aside>
+            <img src="images/index_03.jpg" width="467" height="564" alt="03">
+        </aside>
+
+
         <!--하단영역-->
         <footer>
             대표이사. So Hee Kim │ Business License. 130-86-24632 │ Mail-order Licenst. 제2014-서울마포-0835호 │ Personal info manager. Mi Ryung Oh [사업자정보확인]<br>
